# renderable-prompt-object

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/: CHANGELOG.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: copilot_autoresolve.py  pr_docs_gate.py  pr_template_gate.py
.github/workflows/: ci.yml  copilot-autoresolve.yml  policy-gates.yml
docs/: README.md  deep-research-rubric.md  failure-modes.md  llm-card.md  problem-schema-human.md  problem-schema-llm.md  proof-of-ship-alignment.md  references.md  rubric.md  tldr.md
docs/research/: README.md  rpo-academic-research-2026-02-10.md  rpo-research-sweep-2026-02-17.md
examples/: 01-simple-codegen.json  90-research-round.json
modes/: research.mode.md
schema/: rpo.v1.schema.json
src/rpo/: __init__.py  __main__.py  cli.py  render_ui.py  schema.py
src/rpo/data/: __init__.py  rpo.v1.schema.json
tests/: test_render_ui.py  test_smoke.py
